correcoes em contas
