# app/controllers/conta.controller.js
@@ -8,6 +8,7 @@ exports.create = (req, res) => {
   const conta = {
     valor: req.body.valor,
     dt_pagamento: req.body.dt_pagamento,
+    dt_vencimento: req.body.dt_vencimento,
     descricao: req.body.descricao,
   };
 
@@ -27,6 +28,7 @@ exports.findAll = (req, res) => {
   const id_conta = req.query.id_conta;
   const valor = req.query.valor;
   const dt_pagamento = req.query.dt_pagamento;
+  const dt_vencimento = req.query.dt_vencimento;
   const descricao = req.query.descricao;
   var order = req.query.order;
   var orderBy= req.query.orderBy
@@ -39,10 +41,11 @@ exports.findAll = (req, res) => {
   var conditionIdConta = id_conta ? { id_conta: { [Op.eq]: `${id_conta}` } } : null;
   var conditionValor = valor ? { valor: { [Op.eq]: `${valor}` } } : null;
   var conditionDtPagamento = dt_pagamento ? { dt_pagamento: { [Op.lte]: `${dt_pagamento}` } } : null;
+  var conditionDtVencimento = dt_vencimento ? { dt_vencimento: { [Op.lte]: `${dt_vencimento}` } } : null;
   var conditionIdDescricao = descricao ? { descricao: { [Op.like]: `%${descricao}%` } } : null;
 
   Conta.findAll({ where: {
-    [Op.and]: [conditionIdConta, conditionValor, conditionDtPagamento, conditionIdDescricao]
+    [Op.and]: [conditionIdConta, conditionValor, conditionDtPagamento, conditionIdDescricao, conditionDtVencimento]
   },
   order: [[`${orderBy}`, `${order}`]],
   limit: req.query.rows
